--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "lucide-react": "^0.539.0",
     "preact": "^10.27.0",
     "tailwindcss": "^4.1.11"
   },
